fix: Prevent grid overflow and add min width for the right side bar

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html, body {
-    height: 200%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -20,7 +20,8 @@ html, body {
 body {
     display: grid;
     grid-template-columns: minmax(220px, 260px) 1fr;
-    grid-template-rows: repeat(2, 150px) 1fr;
+    grid-template-rows: 150px 1fr;
+    overflow: auto;
 }
 
 aside.sidebar {
@@ -39,7 +40,7 @@ header {
 .content {
     grid-area: 2 / 2 / -1 / -1;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr minmax(17em,1fr);
     background-color: var(--main-bgc);
     padding: 2em 1em;
     gap: 1em;
@@ -205,8 +206,9 @@ div.user {
 div.nav-buttons {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     gap: 1em;
+    margin-bottom: -5px;
 }
 
 button{
